Squashed commit of the following:
commit 6cabefc47cb0174ba6488a64368131bfc1ebfeea
Author: Werzu25 <leonw@astecs.com>
Date:   Wed Jan 28 10:55:51 2026 +0100

    Update Swagger schema to require device_name and modify fill level properties

commit 749143a80069ee773c38b638741b16e302a8941a
Author: Werzu25 <leonw@astecs.com>
Date:   Wed Jan 28 10:55:43 2026 +0100

    Add psycopg2-binary dependency to pyproject.toml and uv.lock

commit 263a344072fa5a37efb25aea9f7376214f902ef1
Author: Werzu25 <leonw@astecs.com>
Date:   Wed Jan 28 10:41:43 2026 +0100

    Update num_classes parameter in ImageClassifierModel and modelTools to 4

commit 2508f1953fa76fee395c85cf1ac9f6b5e499e9b4
Author: Werzu25 <leonw@astecs.com>
Date:   Wed Jan 28 10:41:31 2026 +0100

    Add PostgreSQL service to Docker Compose and update database connection in webapp.env

commit 6fd572a41629e39275ff50fa67aac3beeab19879
Author: Werzu25 <leonw@astecs.com>
Date:   Wed Jan 28 10:39:10 2026 +0100

    Update .dockerignore and .gitignore to include additional image formats and backup files

commit f3b8f326da9ccb3074327c38dad8d7e5991282e1
Author: Werzu25 <leonw@astecs.com>
Date:   Wed Jan 28 09:14:13 2026 +0100

    Refactor import paths to use the new db module structure

commit b231b21c30627d33b8c5a83ce2d6053e63e77de1
Author: Werzu25 <leonw@astecs.com>
Date:   Wed Jan 28 08:59:59 2026 +0100

    Refactor prediction relationship in ImageModel to enhance clarity and maintainability

commit 4af20cafd3a7ba2da6da78d508bf647ea0cea9ff
Author: Werzu25 <leonw@astecs.com>
Date:   Wed Jan 28 08:59:55 2026 +0100

    Rename fill_level_glass to fill_level_waste and update constraint in FillLevelModel; modify ForeignKey in PredictionModel to include ondelete behavior

commit 8dccdf1b5c20769a17aa8b0a76287a3b607f9b10
Author: Werzu25 <leonw@astecs.com>
Date:   Wed Jan 28 08:52:12 2026 +0100

    Refactor database session management in image saving and request teardown

commit cc4527163c60eabe7bf7c3480ad6795b77e4dfb7
Author: Wer
